fixed feature image size and spacing

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -85,7 +85,7 @@
 
   img {
     width: 90%;
-    height: 25rem;
+    height: 200vh;
   }
 
   button {
